minor fixes more on mobile

--- a/client/src/app/index-aboutme/index-aboutme.component.css
+++ b/client/src/app/index-aboutme/index-aboutme.component.css
@@ -1,5 +1,13 @@
 .page-header-background {
-    background-image: url('/assets/images/man.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("/assets/images/man.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media screen and (max-width: 425px) {
+  .page-project-background {
+    height: 100%;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
+}
